--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./app.js",
+    "format": "prettier-standard src/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Udacity - jose.morales@udacity.com",
@@ -19,6 +20,7 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "prettier-standard": "^14.0.5"
   }
 }
