--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This project creates a Blockchain application to store data into the blocks",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./app.js",
+    "start": "node ./app.js",
+    "watch": "nodemon ./app.js",
     "format": "prettier-standard src/**/*.js",
     "test": "mocha"
   },
